Polish html and css. Scripts next.

--- a/index.html
+++ b/index.html
@@ -10,33 +10,36 @@
 </head>
 <body>
 
-<div title='screen'></div>
+<div id='calc'>
 
-<div title='buttons'>
+	<div id='screen'>09998</div>
 
-	<button class=''>AC</button>
-	<button class=''>+/-</button>
-	<button class=''>%</button>
-	<button class=''>BKSPC</button>
-	<button class=''>7</button>
-	<button class=''>8</button>
-	<button class=''>9</button>
-	<button class=''>*</button>
-	<button class=''>4</button>
-	<button class=''>5</button>
-	<button class=''>6</button>
-	<button class=''>-</button>
-	<button class=''>1</button>
-	<button class=''>2</button>
-	<button class=''>3</button>
-	<button class=''>+</button>
-	<button class=''>.</button>
-	<button class=''>0</button>
-	<button class=''>=</button>
-	<button class=''>/</button>
+	<div id='buttons'>
+
+		<button class='button clear' id='clear'>AC</button>
+		<button class='button extra' id='negOrPos'>+/-</button>
+		<button class='button extra' id='overHundred'>%</button>
+		<button class='button clear' id='backspace'>DEL</button>
+		<button class='button num' id='7'>7</button>
+		<button class='button num' id='8'>8</button>
+		<button class='button num' id='9'>9</button>
+		<button class='button oper' id='divide'>/</button>
+		<button class='button num' id='4'>4</button>
+		<button class='button num' id='5'>5</button>
+		<button class='button num' id='6'>6</button>
+		<button class='button oper' id='multiply'>*</button>
+		<button class='button num' id='1'>1</button>
+		<button class='button num' id='2'>2</button>
+		<button class='button num' id='3'>3</button>
+		<button class='button oper' id='subtract'>-</button>
+		<button class='button extra' id='decimalPoint'>.</button>
+		<button class='button num' id='0'>0</button>
+		<button class='button extra' id='equals'>=</button>
+		<button class='button oper' id='add'>+</button>
+
+	</div>
 
 </div>
-
 
 
 
