Add number input, decimal point, and clear screen functionality

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>John's Calculator</title>
 	<link rel="stylesheet" href="style.css">
-	<script src='script.js'></script>
+	<script src='script.js' defer></script>
 </head>
 <body>
 
 <div id='calc'>
 
-	<div id='screen'>09998</div>
+	<div id='screen'></div>
 
 	<div id='buttons'>
 
